Revision history for Music-Duration

{{$NEXT}}

0.0605 2019-03-03 13:33:21
    - Improved documentation.
    - Added the eg/polyrhythm progam.

0.0604 2019-03-03 11:38:17
    - Added a synonym for the tuple() function - tuplet().
    - Attempted to code The Black Page in eg/.
    - Updated documentation.

0.0603 2019-03-03 01:56:44
    - Removed unneeded code.
    - Improved documentation.

0.0602 2018-10-05 21:06:11
    - Improved documentation.
    - Increased expected digits of precision in test.

0.0601 2018-10-05 12:10:43
    - Fixed documentation again!

0.0600 2018-10-05 11:41:55
    - Removed the entire fractional() function as it is useless.

0.0505 2018-10-05 10:23:45
    - Improved test again.
    - Improved documentation again!

0.0504 2018-10-05 09:59:01
    - Improved test.
    - Improved documentation.

0.0503 2018-10-05 09:36:27
    - Improved documentation.
    - Repaired test.

0.0502 2018-10-04 09:21:20
    - Improved documentation slightly again.

0.0501 2018-10-04 09:12:14
    - Improved documentation.

0.0500 2018-10-04 01:31:17
    - Improved documentation.
    - Added the tuple() function.

0.0400 2018-10-04 00:06:35
    - Improved documentation.
    - Fixed the broken fractional() function.

0.0301 2014-08-30 09:33:39-04:00 America/New_York
    - Improved abstract.
    - Fixed POD.

0.03 2013-12-24 01:24:45 America/Los_Angeles
    - Enabled fractional length assignment.

0.0201 2013-11-19 06:19:11 America/Los_Angeles
    - Fixed github link in dist.ini.

0.02 2013-02-05 19:30:37 America/Los_Angeles
    - Removed MIDI-Perl computational typo fix after resolving.
    - Made tests for each added duration.

0.01 2012.11.06
    - Added to and corrected MIDI::Simple::Length.

0.00_1 2012.11.5
    - Unleashed by Dist::Zilla!