@@ -1,8 +1,8 @@
 package Music::Duration;
 
-# ABSTRACT: Add 32nd, 64th and tuplet durations to MIDI-Perl
+# ABSTRACT: Add 32nd, 64th, 128th and tuplet durations to MIDI-Perl
 
-our $VERSION = '0.0605';
+our $VERSION = '0.0700';
 use strict;
 use warnings;
 
@@ -26,9 +26,9 @@ use MIDI::Simple;
 
 =head1 DESCRIPTION
 
-This module adds thirty-second and sixty-fourth note divisions to
-L<MIDI::Simple> C<%Length>.  It also adds fractional note divisions with the
-B<tuplet()> function.
+This module adds 32nd, 64th, and 128th note divisions to
+L<MIDI::Simple> C<%Length>.  It also adds fractional note divisions
+with the B<tuplet()> function.
 
 32nd durations added:
 
@@ -44,14 +44,21 @@ B<tuplet()> function.
   ddxn: double dotted sixty-fourth note
   txn:  sixty-fourth note triplet
 
+128th durations added:
+
+  on:   128th note
+  don:  dotted 128th note
+  ddon: double dotted 128th note
+  ton:  128th note triplet
+
 =cut
 
 {
     # Set the initial duration to one below 32nd,
     my $last = 's'; # ..which is a sixteenth.
 
-    # Add 32nd and 64th as y and x.
-    for my $duration ( qw( y x ) ) {
+    # Add 32nd, 64th and 128th as y, x, and o respectively.
+    for my $duration ( qw( y x o ) ) {
         # Create a MIDI::Simple format note identifier.
         my $n = $duration . 'n';
 
@@ -59,7 +66,7 @@ B<tuplet()> function.
         $MIDI::Simple::Length{$n} = $MIDI::Simple::Length{ $last . 'n' } / 2;
 
         # Compute the dotted duration.
-        $MIDI::Simple::Length{ 'd'  . $n } = $MIDI::Simple::Length{$n}
+        $MIDI::Simple::Length{ 'd' . $n } = $MIDI::Simple::Length{$n}
             + $MIDI::Simple::Length{$n} / 2;
 
         # Compute the double-dotted duration.
@@ -67,7 +74,7 @@ B<tuplet()> function.
             + $MIDI::Simple::Length{$n} / 4;
 
         # Compute the triplet duration.
-        $MIDI::Simple::Length{ 't'  . $n } = $MIDI::Simple::Length{$n} / 3 * 2;
+        $MIDI::Simple::Length{ 't' . $n } = $MIDI::Simple::Length{$n} / 3 * 2;
 
         # Increment the last duration seen.
         $last = $duration;
@@ -80,19 +87,21 @@ B<tuplet()> function.
 
   Music::Duration::tuplet( 'qn', 'z', 5 );
   # $score->n( 'zqn', ... );
+
   Music::Duration::tuplet( 'wn', 'z', 7 );
   # $score->n( 'zwn', ... );
 
-Add a fractional division to the L<MIDI::Simple> C<Length> hash for a given
-B<name> and B<duration>.
+Add a fractional division to the L<MIDI::Simple> C<Length> hash for a
+given B<name> and B<duration>.
 
-Musically, this creates a series of notes in place of the given B<duration>.
+Musically, this creates a series of notes in place of the given
+B<duration>.
 
 A triplet is a 3-tuplet.
 
-So in the first example, instead of a quarter note, we instead play 5 beats - a
-5-tuple.  In the second, instead of a whole note (of four beats), we instead
-play 7 beats.
+So in the first example, instead of a quarter note, we instead play 5
+beats - a 5-tuple.  In the second, instead of a whole note (of four
+beats), we instead play 7 beats.
 
 =cut
 
